update before release

--- a/dev/changelog/44.0.0.md
+++ b/dev/changelog/44.0.0.md
@@ -19,7 +19,7 @@ under the License.
 
 # Apache DataFusion 44.0.0 Changelog
 
-This release consists of 317 commits from 92 contributors. See credits at the end of this changelog for more information.
+This release consists of 332 commits from 94 contributors. See credits at the end of this changelog for more information.
 
 **Breaking changes:**
 
@@ -109,6 +109,7 @@ This release consists of 317 commits from 92 contributors. See credits at the en
 - Add documentation for `SHOW FUNCTIONS` [#13868](https://github.com/apache/datafusion/pull/13868) (alamb)
 - Support unicode character for `initcap` function [#13752](https://github.com/apache/datafusion/pull/13752) (tlm365)
 - [minor] make recursive package dependency optional [#13778](https://github.com/apache/datafusion/pull/13778) (buraksenn)
+- Fix `recursive-protection` feature flag [#13887](https://github.com/apache/datafusion/pull/13887) (alamb)
 
 **Other:**
 
@@ -351,13 +352,23 @@ This release consists of 317 commits from 92 contributors. See credits at the en
 - Minor: fix: Include FetchRel when producing LogicalPlan from Sort [#13862](https://github.com/apache/datafusion/pull/13862) (robtandy)
 - Minor: improve error message when ARRAY literals can not be planned [#13859](https://github.com/apache/datafusion/pull/13859) (alamb)
 - Minor: remove unused async-compression `futures-io` feature [#13875](https://github.com/apache/datafusion/pull/13875) (jonahgao)
+- Consolidate Example: dataframe_output.rs into dataframe.rs [#13877](https://github.com/apache/datafusion/pull/13877) (zhuqi-lucas)
+- Restore `DocBuilder::new()` to avoid breaking API change [#13870](https://github.com/apache/datafusion/pull/13870) (alamb)
+- Improve error messages for incorrect zero argument signatures [#13881](https://github.com/apache/datafusion/pull/13881) (alamb)
+- chore: Consolidate Example: simplify_udwf_expression.rs into advanced_udwf.rs [#13883](https://github.com/apache/datafusion/pull/13883) (xarus01)
+- minor: fix typos in comments / structure names [#13879](https://github.com/apache/datafusion/pull/13879) (zhuliquan)
+- Support 1 or 3 arg in generate_series() UDTF [#13856](https://github.com/apache/datafusion/pull/13856) (UBarney)
+- Support (order by / sort) for DataFrameWriteOptions [#13874](https://github.com/apache/datafusion/pull/13874) (zhuqi-lucas)
+- Minor: change the sort merge join emission as incremental [#13894](https://github.com/apache/datafusion/pull/13894) (berkaysynnada)
+- Minor: change visibility of hash join utils [#13893](https://github.com/apache/datafusion/pull/13893) (berkaysynnada)
+- Fix visibility of `swap_hash_join` to be `pub` [#13899](https://github.com/apache/datafusion/pull/13899) (alamb)
 
 ## Credits
 
 Thank you to everyone who contributed to this release. Here is a breakdown of commits (PRs merged) per contributor.
 
 ```
-    51	Andrew Lamb
+    59	Andrew Lamb
     35	Piotr Findeisen
     16	Jonathan Chen
     14	Jonah Gao
@@ -375,14 +386,16 @@ Thank you to everyone who contributed to this release. Here is a breakdown of co
      4	Marco Neumann
      4	Tai Le Manh
      4	Tim Saucer
+     4	zhuliquan
      3	Andy Grove
      3	Arttu
+     3	Berkay Şahin
      3	Burak Şen
      3	Onur Satici
+     3	Qi Zhu
      3	Raz Luvaton
      3	delamarch3
      3	irenjj
-     3	zhuliquan
      2	Alex Kesling
      2	Alihan Çelikcan
      2	Daniel Hegberg
@@ -407,7 +420,6 @@ Thank you to everyone who contributed to this release. Here is a breakdown of co
      1	Ariana J Mann
      1	Athul T R
      1	Austin Liu
-     1	Berkay Şahin
      1	Brent Gardner
      1	Costi Ciudatu
      1	David Rauschenbach
@@ -418,6 +430,7 @@ Thank you to everyone who contributed to this release. Here is a breakdown of co
      1	Hengfei Yang
      1	Huaijin
      1	Jack
+     1	Jack Park
      1	Jagdish Parihar
      1	Justin Zhu
      1	Kezhu Wang
@@ -432,11 +445,11 @@ Thank you to everyone who contributed to this release. Here is a breakdown of co
      1	Mehmet Ozan Kabak
      1	NoeB
      1	Paul J. Davis
-     1	Qi Zhu
      1	Rohan Krishnaswamy
      1	Sergei Grebnov
      1	Shehab Amin
      1	Sherin Jacob
+     1	UBarney
      1	Victor Barua
      1	Zhang Li
      1	cht42
