--- a/dev/changelog/44.0.0.md
+++ b/dev/changelog/44.0.0.md
@@ -19,7 +19,7 @@ under the License.
 
 # Apache DataFusion 44.0.0 Changelog
 
-This release consists of 332 commits from 94 contributors. See credits at the end of this changelog for more information.
+This release consists of 329 commits from 94 contributors. See credits at the end of this changelog for more information.
 
 **Breaking changes:**
 
@@ -110,6 +110,7 @@ This release consists of 332 commits from 94 contributors. See credits at the en
 - Support unicode character for `initcap` function [#13752](https://github.com/apache/datafusion/pull/13752) (tlm365)
 - [minor] make recursive package dependency optional [#13778](https://github.com/apache/datafusion/pull/13778) (buraksenn)
 - Fix `recursive-protection` feature flag [#13887](https://github.com/apache/datafusion/pull/13887) (alamb)
+- Prepare for 44.0.0 release: version and changelog [#13882](https://github.com/apache/datafusion/pull/13882) (alamb)
 
 **Other:**
 
@@ -362,13 +363,15 @@ This release consists of 332 commits from 94 contributors. See credits at the en
 - Minor: change the sort merge join emission as incremental [#13894](https://github.com/apache/datafusion/pull/13894) (berkaysynnada)
 - Minor: change visibility of hash join utils [#13893](https://github.com/apache/datafusion/pull/13893) (berkaysynnada)
 - Fix visibility of `swap_hash_join` to be `pub` [#13899](https://github.com/apache/datafusion/pull/13899) (alamb)
+- Minor: Avoid emitting empty batches in partial sort [#13895](https://github.com/apache/datafusion/pull/13895) (berkaysynnada)
+- BACKPORT: Correct return type for initcap scalar function with utf8view (#13909) [#13934](https://github.com/apache/datafusion/pull/13934) (alamb)
 
 ## Credits
 
 Thank you to everyone who contributed to this release. Here is a breakdown of commits (PRs merged) per contributor.
 
 ```
-    59	Andrew Lamb
+    55	Andrew Lamb
     35	Piotr Findeisen
     16	Jonathan Chen
     14	Jonah Gao
@@ -383,13 +386,13 @@ Thank you to everyone who contributed to this release. Here is a breakdown of co
      5	Dmitrii Blaginin
      5	Qianqian
      4	Adrian Garcia Badaracco
+     4	Berkay Şahin
      4	Marco Neumann
      4	Tai Le Manh
      4	Tim Saucer
      4	zhuliquan
      3	Andy Grove
      3	Arttu
-     3	Berkay Şahin
      3	Burak Şen
      3	Onur Satici
      3	Qi Zhu
