--- a/dev/changelog/52.1.0.md
+++ b/dev/changelog/52.1.0.md
@@ -31,6 +31,7 @@ See the [upgrade guide](https://datafusion.apache.org/library-user-guide/upgradi
 
 - [branch-52] fix: expose `ListFilesEntry` [#19818](https://github.com/apache/datafusion/pull/19818) (lonless9)
 - [branch 52] Fix grouping set subset satisfaction [#19855](https://github.com/apache/datafusion/pull/19855) (gabotechs)
+- Add BatchAdapter to simplify using PhysicalExprAdapter / Projector [#19877](https://github.com/apache/datafusion/pull/19877) (alamb)
 
 ## Credits
 
