fixed header levels

--- a/docs/source/library-user-guide/upgrading/46.0.0.md
+++ b/docs/source/library-user-guide/upgrading/46.0.0.md
@@ -19,7 +19,7 @@
 
 # Upgrade Guides
 
-# DataFusion 46.0.0
+## DataFusion 46.0.0
 
 ### Use `invoke_with_args` instead of `invoke()` and `invoke_batch()`
 
