--- a/docs/source/library-user-guide/upgrading/47.0.0.md
+++ b/docs/source/library-user-guide/upgrading/47.0.0.md
@@ -19,7 +19,7 @@
 
 # Upgrade Guides
 
-# DataFusion 47.0.0
+## DataFusion 47.0.0
 
 This section calls out some of the major changes in the `47.0.0` release of DataFusion.
 
