--- a/docs/source/library-user-guide/upgrading/48.0.1.md
+++ b/docs/source/library-user-guide/upgrading/48.0.1.md
@@ -19,7 +19,7 @@
 
 # Upgrade Guides
 
-# DataFusion 48.0.1
+## DataFusion 48.0.1
 
 ### `datafusion.execution.collect_statistics` now defaults to `true`
 
