--- a/docs/source/library-user-guide/upgrading/50.0.0.md
+++ b/docs/source/library-user-guide/upgrading/50.0.0.md
@@ -19,7 +19,7 @@
 
 # Upgrade Guides
 
-# DataFusion 50.0.0
+## DataFusion 50.0.0
 
 ### ListingTable automatically detects Hive Partitioned tables
 
