--- a/docs/source/library-user-guide/upgrading/52.0.0.md
+++ b/docs/source/library-user-guide/upgrading/52.0.0.md
@@ -19,7 +19,7 @@
 
 # Upgrade Guides
 
-# DataFusion 52.0.0
+## DataFusion 52.0.0
 
 ### Changes to DFSchema API
 
@@ -648,7 +648,7 @@ let config = FileScanConfigBuilder::new(url, source)
 
 ### `SchemaAdapter` and `SchemaAdapterFactory` completely removed
 
-Following the deprecation announced in [DataFusion 49.0.0](#deprecating-schemaadapterfactory-and-schemaadapter), `SchemaAdapterFactory` has been fully removed from Parquet scanning. This applies to both:
+Following the deprecation announced in [DataFusion 49.0.0](49.0.0.md#deprecating-schemaadapterfactory-and-schemaadapter), `SchemaAdapterFactory` has been fully removed from Parquet scanning. This applies to both:
 
 The following symbols have been deprecated and will be removed in the next release:
 
