--- a/docs/source/library-user-guide/upgrading/53.0.0.md
+++ b/docs/source/library-user-guide/upgrading/53.0.0.md
@@ -19,7 +19,7 @@
 
 # Upgrade Guides
 
-# DataFusion 53.0.0
+## DataFusion 53.0.0
 
 **Note:** DataFusion `53.0.0` has not been released yet. The information provided
 *in this section pertains to features and changes that have already been merged
