--- a/docs/source/library-user-guide/upgrading/53.0.0.md
+++ b/docs/source/library-user-guide/upgrading/53.0.0.md
@@ -28,10 +28,18 @@
 
 [#19692]: https://github.com/apache/datafusion/issues/19692
 
-### `ExecutionPlan` properties method return type
+### `ExecutionPlan::properties` now returns `&Arc<PlanProperties>`
 
-Now `ExecutionPlan::properties()` must return `&Arc<PlanProperties>` instead of a reference. This was done to enable the comparison of properties and to determine that they have not changed within the
-`with_new_children` method. To migrate, in all `ExecutionPlan` implementations, you need to wrap stored `PlanProperties` in an `Arc`:
+Now `ExecutionPlan::properties()` returns `&Arc<PlanProperties>` instead of a
+reference. This make it possible to cheaply clone properties and reuse them across multiple
+`ExecutionPlans`. It also makes it possible to optimize [`ExecutionPlan::with_new_children`]
+to reuse properties when the children plans have not changed, which can significantly reduce
+planning time for complex queries.
+
+[`ExecutionPlan::with_new_children`](https://docs.rs/datafusion/latest/datafusion/physical_plan/trait.ExecutionPlan.html#tymethod.with_new_children)
+
+To migrate, in all `ExecutionPlan` implementations, you will likely need to wrap
+stored `PlanProperties` in an `Arc`:
 
 ```diff
 -    cache: PlanProperties,
@@ -45,9 +53,12 @@ Now `ExecutionPlan::properties()` must return `&Arc<PlanProperties>` instead of 
      }
 ```
 
-Note: The optimization for `with_new_children` can be implemented for any `ExecutionPlan`. This can reduce planning time as well as the time for resetting plan states.
-To support it, you can use the macro: `check_if_same_properties`. For it to work, you need to implement the function: `with_new_children_and_same_properties` with semantics
-identical to `with_new_children`, but operating under the assumption that the properties of the children plans have not changed.
+To improve performance of `with_new_children` for custom `ExecutionPlan`
+implementations, you can use the new macro: `check_if_same_properties`. For it
+to work, you need to implement the function:
+`with_new_children_and_same_properties` with semantics identical to
+`with_new_children`, but operating under the assumption that the properties of
+the children plans have not changed.
 
 An example of supporting this optimization for `ProjectionExec`:
 
@@ -78,9 +89,6 @@ An example of supporting this optimization for `ProjectionExec`:
             .map(|p| Arc::new(p) as _)
         }
     }
-
-...
-
 ```
 
 ### `PlannerContext` outer query schema API now uses a stack
